v0.2.3-dev # global delete improved